--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,6 +19,10 @@
   </md-card-content>
 </md-card>
 
+<div [hidden]="dish">
+    <md-spinner></md-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
+
 <md-card *ngIf="promotion" fxFlex>
   <md-card-header>
     <div md-card-avatar></div>
@@ -32,6 +36,10 @@
     </p>
   </md-card-content>
 </md-card>
+
+<div [hidden]="promotion">
+    <md-spinner></md-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
 
 <md-card *ngIf="leader" fxFlex>
   <md-card-header>
@@ -47,4 +55,9 @@
   </md-card-content>
 </md-card>
 
+<div [hidden]="leader">
+    <md-spinner></md-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
+
 </div>
+
